NXBT-1022: rename continuous bench suite with week, create workbench section

--- a/content/continuous/339.md
+++ b/content/continuous/339.md
@@ -2,7 +2,7 @@
 title: "pgsql 2 339"
 build_number: "339"
 benchid: "continuous"
-bench_suite: "CI Weekly Benchmark"
+bench_suite: "16w11 CI Weekly Benchmark"
 dbprofile: "pgsql"
 date: 2016-03-17T04:29:26
 type: bench
