--- a/content/continuous/342.md
+++ b/content/continuous/342.md
@@ -2,7 +2,7 @@
 title: "oracle12c 2 342"
 build_number: "342"
 benchid: "continuous"
-bench_suite: "CI Weekly Benchmark"
+bench_suite: "16w11 CI Weekly Benchmark"
 dbprofile: "oracle12c"
 date: 2016-03-17T07:35:49
 type: bench
