NXBT-1022 class misc test

--- a/content/misc/344.md
+++ b/content/misc/344.md
@@ -2,7 +2,7 @@
 title: "mongodb 2 344"
 build_number: "344"
 benchid: "continuous"
-bench_suite: "Test"
+bench_suite: "Test Audit and FT updater refactoring"
 dbprofile: "mongodb"
 date: 2016-03-17T09:14:34
 type: bench
