--- a/content/misc/353.md
+++ b/content/misc/353.md
@@ -2,7 +2,7 @@
 title: "mongodb 2 353"
 build_number: "353"
 benchid: "continuous"
-bench_suite: "Test"
+bench_suite: "Test Audit and FT updater refactoring"
 dbprofile: "mongodb"
 date: 2016-03-17T14:35:19
 type: bench
