NXBT-1022 make classifier modifiable per report, analyze audit/ft results

--- a/content/misc/340.md
+++ b/content/misc/340.md
@@ -1,9 +1,12 @@
 ---
-title: "mongodb 2 340"
+title: "mongodb 1 340"
 build_number: "340"
 benchid: "continuous"
-bench_suite: "Test Audit and FT updater refactoring"
+bench_suite: "16w11 NXP-17934/NXP-17862 audit and fulltext updater"
 dbprofile: "mongodb"
 date: 2016-03-17T05:17:13
+classifier: "Reference"
 type: bench
 ---
+## Analyze
+This is the reference benchmark on master.
