--- a/content/misc/344.md
+++ b/content/misc/344.md
@@ -1,9 +1,21 @@
 ---
-title: "mongodb 2 344"
+title: "mongodb 3 344"
 build_number: "344"
 benchid: "continuous"
-bench_suite: "Test Audit and FT updater refactoring"
+bench_suite: "16w11 NXP-17934/NXP-17862 audit and fulltext updater"
 dbprofile: "mongodb"
+classifier: "Audit and fulltext"
 date: 2016-03-17T09:14:34
 type: bench
 ---
+## Analyze
+This benchmark is done with both optimization:
+
+- Audit optimization [NXP-17934](https://jira.nuxeo.com/browse/NXP-17934)
+- Fulltext updater [NXP-17862](https://jira.nuxeo.com/browse/NXP-17862)
+
+Theses optimizaton reduce async processing duration from 7x to 11x.
+
+The gain comes mostly from the ft updater refactoring and 30% from audit refactoring.
+
+The total benchmark duration is shorter from ~1h15 to 41min.
