--- a/content/misc/353.md
+++ b/content/misc/353.md
@@ -2,8 +2,11 @@
 title: "mongodb 2 353"
 build_number: "353"
 benchid: "continuous"
-bench_suite: "Test Audit and FT updater refactoring"
+bench_suite: "16w11 NXP-17934/NXP-17862 audit and fulltext updater"
 dbprofile: "mongodb"
+classifier: "Audit only"
 date: 2016-03-17T14:35:19
 type: bench
 ---
+## Analyze
+This is only with audit optimization [NXP-17934](https://jira.nuxeo.com/browse/NXP-17934)
