--- a/content/misc/241.md
+++ b/content/misc/241.md
@@ -2,8 +2,9 @@
 title: "pgsql 2 241"
 build_number: "241"
 benchid: "master"
-bench_suite: "Test DB invalidation"
+bench_suite: "16w08 NXP-14923 Redis vs DB invalidation"
 dbprofile: "pgsql"
 date: 2016-02-23T07:50:23
+classifier: "DB invalidation"
 type: bench
 ---
