--- a/content/misc/243.md
+++ b/content/misc/243.md
@@ -2,8 +2,9 @@
 title: "pgsql 4 243"
 build_number: "243"
 benchid: "master"
-bench_suite: "Test DB invalidation"
+bench_suite: "16w08 NXP-14923 Redis vs DB invalidation"
 dbprofile: "pgsql"
 date: 2016-02-23T12:02:04
+classifier: "DB invalidation"
 type: bench
 ---
