--- a/content/misc/246.md
+++ b/content/misc/246.md
@@ -1,8 +1,8 @@
 ---
-title: "pgsql 2 246"
+title: "pgsql 1 2 246"
 build_number: "246"
 benchid: "master"
-bench_suite: "Test DB invalidation"
+bench_suite: "16w08 NXP-14923 Redis vs DB invalidation"
 dbprofile: "pgsql"
 date: 2016-02-23T16:29:33
 classifier: "Redis invalidation"
