--- a/content/continuous/356.md
+++ b/content/continuous/356.md
@@ -1,6 +1,6 @@
 ---
 title: "pgsql 2 356"
-bench_suite: "auto"
+bench_suite: "16w12 CI Weekly Benchmark"
 build_number: "356"
 dbprofile: "pgsql"
 classifier: ""
