--- a/content/continuous/358.md
+++ b/content/continuous/358.md
@@ -1,6 +1,6 @@
 ---
 title: "mssql 2 358"
-bench_suite: "auto"
+bench_suite: "16w12 CI Weekly Benchmark"
 build_number: "358"
 dbprofile: "mssql"
 classifier: ""
