--- a/content/continuous/357.md
+++ b/content/continuous/357.md
@@ -1,6 +1,6 @@
 ---
 title: "mongodb 2 357"
-bench_suite: "16w12 CI Weekly Benchmark"
+bench_suite: "16w11-2 CI Weekly Benchmark"
 build_number: "357"
 dbprofile: "mongodb"
 classifier: ""
