--- a/content/continuous/359.md
+++ b/content/continuous/359.md
@@ -1,6 +1,6 @@
 ---
 title: "oracle12c 2 359"
-bench_suite: "16w12 CI Weekly Benchmark"
+bench_suite: "16w11-2 CI Weekly Benchmark"
 build_number: "359"
 dbprofile: "oracle12c"
 classifier: ""
