NXBT-1018: Comment default pool size results

--- a/content/misc/377.md
+++ b/content/misc/377.md
@@ -1,6 +1,6 @@
 ---
-title: "mongodb 2 377"
-bench_suite: "16w12 NXBT-1018 Test default pool  size"
+title: "1 mongodb 2 377"
+bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "377"
 dbprofile: "mongodb"
 classifier: "reference"
