--- a/content/misc/395.md
+++ b/content/misc/395.md
@@ -1,6 +1,6 @@
 ---
-title: "mongodb 2 395"
-bench_suite: "16w12 NXBT-1018 Test default pool  size"
+title: "3 mongodb 2 395"
+bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "395"
 dbprofile: "mongodb"
 classifier: "pool 8 ondemand"
