--- a/content/misc/396.md
+++ b/content/misc/396.md
@@ -1,6 +1,6 @@
 ---
-title: "mongodb 2 396"
-bench_suite: "16w12 NXBT-1018 Test default pool  size"
+title: "4 mongodb 2 396"
+bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "396"
 dbprofile: "mongodb"
 classifier: "pool 20 ondemand"
