--- a/content/misc/397.md
+++ b/content/misc/397.md
@@ -1,6 +1,6 @@
 ---
-title: "mongodb 2 397"
-bench_suite: "16w12 NXBT-1018 Test default pool  size"
+title: "2 mongodb 2 397"
+bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "397"
 dbprofile: "mongodb"
 classifier: "pool 6 ondemand"
