NXBT-1018: Comment default pool size results bis

--- a/content/misc/395.md
+++ b/content/misc/395.md
@@ -3,7 +3,7 @@ title: "3 mongodb 2 395"
 bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "395"
 dbprofile: "mongodb"
-classifier: "pool 8 ondemand"
+classifier: "pool size=8"
 date: 2016-04-05T08:27:03
 type: "bench"
 ---
