--- a/content/misc/396.md
+++ b/content/misc/396.md
@@ -3,7 +3,7 @@ title: "4 mongodb 2 396"
 bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "396"
 dbprofile: "mongodb"
-classifier: "pool 20 ondemand"
+classifier: "pool size=20"
 date: 2016-04-07T09:28:15
 type: "bench"
 ---
