--- a/content/misc/397.md
+++ b/content/misc/397.md
@@ -3,7 +3,7 @@ title: "2 mongodb 2 397"
 bench_suite: "16w12 NXBT-1018 Test default pool size"
 build_number: "397"
 dbprofile: "mongodb"
-classifier: "pool 6 ondemand"
+classifier: "pool size=6"
 date: 2016-04-07T12:33:09
 type: "bench"
 ---
