Add analysis on search optims

--- a/content/misc/427.md
+++ b/content/misc/427.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 427"
-bench_suite: "Test with search simulation"
+bench_suite: "16w17 NXP-19389 Search optim"
 build_number: "427"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "reference"
 date: 2016-04-26T14:26:12
 type: "bench"
 ---
