--- a/content/misc/429.md
+++ b/content/misc/429.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 429"
-bench_suite: "Test with search simulation"
+bench_suite: "16w17 NXP-19389 Search optim"
 build_number: "429"
 dbprofile: "mongodb"
-classifier: "no load of external entities"
+classifier: "NXP-19581 no load of external entities"
 date: 2016-04-27T14:34:54
 type: "bench"
 ---
