--- a/content/misc/430.md
+++ b/content/misc/430.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 430"
-bench_suite: "Test with search simulation"
+bench_suite: "16w17 NXP-19389 Search optim"
 build_number: "430"
 dbprofile: "mongodb"
-classifier: "add a userManager cache"
+classifier: "NXP-19584 add a userManager cache"
 date: 2016-04-28T11:02:38
 type: "bench"
 ---
