--- a/content/misc/431.md
+++ b/content/misc/431.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 431"
-bench_suite: "Test with search simulation"
+bench_suite: "16w17 NXP-19389 Search optim"
 build_number: "431"
 dbprofile: "mongodb"
-classifier: "use client locale instead of user pref"
+classifier: "NXP-19588 use client locale instead of user pref"
 date: 2016-04-28T14:38:38
 type: "bench"
 ---
