--- a/content/misc/488.md
+++ b/content/misc/488.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 488"
-bench_suite: "NXP-19754 Test import with random dublincore properties"
+bench_suite: "16w23 NXP-19754 Test import with random dublincore properties"
 build_number: "488"
 dbprofile: "mongodb"
-classifier: "ref"
+classifier: "reference"
 date: 2016-06-07T09:37:02
 type: "bench"
 ---
