--- a/content/misc/489.md
+++ b/content/misc/489.md
@@ -1,6 +1,6 @@
 ---
 title: "mongodb 2 489"
-bench_suite: "NXP-19754 Test import with random dublincore properties"
+bench_suite: "16w23 NXP-19754 Test import with random dublincore properties"
 build_number: "489"
 dbprofile: "mongodb"
 classifier: "withProperties"
