--- a/content/workbench/3.md
+++ b/content/workbench/3.md
@@ -1,6 +1,6 @@
 ---
 title: "mongodb 2 3"
-bench_suite: "Current snapshot on master"
+bench_suite: "Current snapshot on master - compact"
 build_number: "3"
 dbprofile: "mongodb"
 classifier: ""
