Removing build 630, 631 and moving build 632, 633 and 634 to category misc

--- a/content/misc/633.md
+++ b/content/misc/633.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 3 633"
-bench_suite: "DBS cache enabled"
+bench_suite: "16w44 NXP-20640 DBS cache enabled"
 build_number: "633"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "cache enabled"
 date: 2016-11-03T10:05:58
 type: "bench"
 ---
