--- a/content/misc/632.md
+++ b/content/misc/632.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 632"
-bench_suite: "DBS cache enabled"
+bench_suite: "16w44 NXP-20640 DBS cache enabled"
 build_number: "632"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "cache enabled"
 date: 2016-11-02T17:29:30
 type: "bench"
 ---
