--- a/content/misc/634.md
+++ b/content/misc/634.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 4 634"
-bench_suite: "DBS cache enabled"
+bench_suite: "16w44 NXP-20640 DBS cache enabled"
 build_number: "634"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "cache enabled"
 date: 2016-11-03T14:16:29
 type: "bench"
 ---
