fix custom bench marklogic

--- a/content/custom/794.md
+++ b/content/custom/794.md
@@ -1,9 +1,9 @@
 ---
 title: "marklogic 2 794"
-bench_suite: "Test with more documents"
+bench_suite: "17w03 Marklogic"
 build_number: "794"
 dbprofile: "marklogic"
 classifier: ""
 date: 2017-01-19T15:32:00
-type: "bench"
+type: "custom"
 ---
