--- a/content/custom/795.md
+++ b/content/custom/795.md
@@ -1,9 +1,9 @@
 ---
 title: "marklogic 2 795"
-bench_suite: "Test with more documents"
+bench_suite: "17w03 Marklogic"
 build_number: "795"
 dbprofile: "marklogic"
 classifier: ""
 date: 2017-01-19T17:49:33
-type: "bench"
+type: "custom"
 ---
