rename test suite that does not follow the date pattern

--- a/content/misc/874.md
+++ b/content/misc/874.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 874"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "874"
 dbprofile: "marklogic"
 classifier: "stream queryKeyValue + poc on scroll (with InputStream) + replace key improvement (after review)"
