--- a/content/misc/909.md
+++ b/content/misc/909.md
@@ -1,6 +1,6 @@
 ---
 title: "mongodb 2 909"
-bench_suite: "Test potential regression after commit"
+bench_suite: "17w18 Test potential regression after commit"
 build_number: "909"
 dbprofile: "mongodb"
 classifier: ""
