--- a/content/misc/861.md
+++ b/content/misc/861.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 861"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "861"
 dbprofile: "marklogic"
 classifier: "stream ML results for queries"
