--- a/content/misc/862.md
+++ b/content/misc/862.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 862"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "862"
 dbprofile: "marklogic"
 classifier: "reference"
