--- a/content/misc/863.md
+++ b/content/misc/863.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 863"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "863"
 dbprofile: "marklogic"
 classifier: "stream ​ML ​results ​for ​queries + poc on scroll"
