--- a/content/misc/865.md
+++ b/content/misc/865.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 865"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "865"
 dbprofile: "marklogic"
 classifier: "poc on scroll"
