--- a/content/misc/875.md
+++ b/content/misc/875.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 875"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "875"
 dbprofile: "marklogic"
 classifier: "everything (stream/scroll/key serial/deserial) + little cache on key serialization/deserialization"
