--- a/content/misc/876.md
+++ b/content/misc/876.md
@@ -1,6 +1,6 @@
 ---
 title: "marklogic 2 876"
-bench_suite: "NXP-22022 Search optim for MarkLogic"
+bench_suite: "17w15 NXP-22022 Search optim for MarkLogic"
 build_number: "876"
 dbprofile: "marklogic"
 classifier: "everything (stream/scroll/key serial/deserial) + little cache on key serialization/deserialization (CHM putIfAbsent override)"
