--- a/content/misc/984.md
+++ b/content/misc/984.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 984"
-bench_suite: "17w28 test NXP-22019"
+bench_suite: "17w28 perf regression tests"
 build_number: "984"
 dbprofile: "mongodb"
-classifier: "without change token"
+classifier: "NXP-22019 test without change token"
 date: 2017-07-11T14:19:20
 type: "bench"
 ---
