--- a/content/misc/985.md
+++ b/content/misc/985.md
@@ -3,7 +3,7 @@ title: "mongodb 2 985"
 bench_suite: "17w28 perf regression tests"
 build_number: "985"
 dbprofile: "mongodb"
-classifier: "diretories in h2"
+classifier: "NXP-22634 diretories back in h2"
 date: 2017-07-12T10:24:39
 type: "bench"
 ---
