--- a/content/misc/1532.md
+++ b/content/misc/1532.md
@@ -3,7 +3,7 @@ title: "mongodb 2 1532"
 bench_suite: "18w33 NXP-25355 Audit block of sequence"
 build_number: "1532"
 dbprofile: "mongodb"
-classifier: "reference with translog async"
+classifier: "translog async"
 date: 2018-08-14T11:37:24
 type: "bench"
 ---
