--- a/content/misc/2021.md
+++ b/content/misc/2021.md
@@ -1,9 +1,9 @@
 ---
 title: "mongodb 2 2021"
-bench_suite: "Current snapshot on master"
+bench_suite: "19w36 NXP-27942 Remove JAAS"
 build_number: "2021"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "Without JAAS Java 11"
 date: 2019-09-05T14:06:16
 type: "bench"
 ---
