Password forms: updated, styling and functionality.

--- a/content/401.md
+++ b/content/401.md
@@ -1,9 +1,9 @@
 +++
 date = "2017-03-10T14:51:14-05:00"
-title = "401: Unauthorized"
+title = "Members Only"
 draft = false
 type = "page"
 layout = "requestaccess"
 
 +++
-To request access, fill in the form below.
+We're open and transparent but for legal reasons we need to keep these within our community. Please register your corporate email address here to get a free access to our benchmarks.
