--- a/content/misc/2425.md
+++ b/content/misc/2425.md
@@ -3,7 +3,7 @@ title: "mongodb 2 2425"
 bench_suite: "20w49 TL-345 Elastic shards"
 build_number: "2425"
 dbprofile: "mongodb"
-classifier: ""
+classifier: "15 shards"
 date: 2020-12-02T12:36:31
 type: "bench"
 ---
